# DwarfJeansAnalysis

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml  writeup.yml
Segue1_test/: compare_pace_vs_bpr08.py  run_segue1.py  summary_geha_nop.csv  summary_geha_nop_logunif.csv  summary_nop.csv  summary_pace.csv  summary_pace_nop_fixrp_logunif.csv  summary_pace_nop_logunif.csv
Segue1_test/baseline_logflat/: summary.csv
data/: path_b_status.md  path_b_worklist.csv  path_b_worklist.md
data/bruce2023/: PROVENANCE.md  apjacc943t3_mrt.txt  checksums.sha256
data/chiti2022/: PROVENANCE.md  apjac96edt2_ascii.txt  checksums.sha256
data/chiti2023/: PROVENANCE.md  checksums.sha256  stars.csv  table6.csv
data/geha2026/: PROVENANCE.md  checksums.sha256
data/hansen2024/: PROVENANCE.md  apjad3a52t1_ascii.txt  checksums.sha256
data/heiger2024/: PROVENANCE.md  apjad0cf7t4_mrt.txt  checksums.sha256
data/ji2021/: PROVENANCE.md  checksums.sha256  table4.csv  table5.csv
data/kirby2015/: PROVENANCE.md  apj518514t2_ascii.txt  checksums.sha256
data/koposov2015/: PROVENANCE.md  apj519209t2_ascii.txt  checksums.sha256
data_ingest/: stage0a_registry.py  stage0b_geha.py  staging.py
docs/: open-issues.md  path_b_sigma_audit.md  review-checklist.md
scripts/: audit_pathb_sigma.py  bench_grid_halving.py  bench_grid_sweep.py  bench_grid_wide.py  bench_vectorize_loop.py  build_satgen_prior_table.py  build_satgen_shmr_prior_tables.py  plot_config.py  plot_posteriors.py  run_batch.py  run_production.py  submit_batch.sh
(+335 files in other folders)
